[package]
name = "select"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
tokio = { version = "1", features = ["rt", "macros"] }
queryer = { path = "../queryer" }
tracing-subscriber = "0.2"
