[package]
name = "select"
version = "0.1.0"
edition = "2018"
license = "MIT"
documentation = "https://docs.rs/select/0.1.0/select/"
repository = "https://github.com/tyrchen/select"
homepage = "https://github.com/tyrchen/select"
description = """
A command line tool to query data source via SQL query.
"""
readme = "../README.md"
categories = ["command-line-utilities"]
keywords = ["sql", "dataframe", "parser"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
tokio = { version = "1", features = ["rt", "macros"] }
queryer = { path = "../queryer" }
tracing-subscriber = "0.2"
